hass/hass-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hass
  template:
    metadata:
      labels:
        app: hass
    spec:
      volumes:
        - name: hass-pv-storage
          persistentVolumeClaim:
            claimName: hass-pv-claim
      containers:
        - image: homeassistant/home-assistant:0.118.4
          name: hass
          ports:
          - containerPort: 8123
          volumeMounts:
          - mountPath: "/config"
            name: hass-pv-storage
