hass/vshass-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vshass
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vshass
  template:
    metadata:
      labels:
        app: vshass
    spec:
      volumes:
        - name: hass-pv-storage
          persistentVolumeClaim:
            claimName: hass-pv-claim
      containers:
        - image: codercom/code-server:3.5.0
          name: vshass
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: "/home/coder/project"
            name: hass-pv-storage
          args: ["--allow-http", "--no-auth", "--disable-telemetry"]
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                    - hass
              topologyKey: "kubernetes.io/hostname"
