hass/hass-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass
  labels:
    app: hass
spec:
  selector:
    app: hass
  ports:
  - port: 80
    name: http
    targetPort: 8123
