hass/vshass-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vshass
  labels:
    app: vshass
spec:
  selector:
    app: vshass
  ports:
  - port: 80
    name: http
    targetPort: 8080
