hass/hass-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hass
spec:
  rules:
  - host: hass2.xip.io
    http:
      paths:
      - backend:
          serviceName: hass
          servicePort: 80
