hass/vshass-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vshass
spec:
  rules:
  - host: vshass.xip.io
    http:
      paths:
      - backend:
          serviceName: vshass
          servicePort: 80
